--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,19 @@
   border: black solid 1px;
   margin: 50px;
   display: inline-block;
+  position: absolute;
+}
+
+#instructions{
+  margin: 20px;
+  display: inline-block;
+  position: absolute;
+}
+
+#gameover{
+  padding: 300px 0;
+  position: absolute;
+  margin-left: 120px;
 }
 
 .cell {
